networking/account-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: account-route
spec:
  hosts:
  - membership-service
  gateways:
  - gateway
  http:
  - match:
    - uri:
        exact: /account
    route:
    - destination:
        host: account-service
        port:
          number: 8081
